# ROS-2-Robot-Health-Monitoring-and-Anomaly-Detection-System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
api/: main.py
config/: thresholds.yaml
ros2_ws/src/robot_alert_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_alert_manager/resource/: robot_alert_manager
ros2_ws/src/robot_alert_manager/robot_alert_manager/: alert_manager_node.py
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/launch/: robot_health_system.launch.py
ros2_ws/src/robot_dashboard_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_dashboard_bridge/resource/: robot_dashboard_bridge
ros2_ws/src/robot_dashboard_bridge/robot_dashboard_bridge/: dashboard_bridge_node.py
ros2_ws/src/robot_health_monitor/: package.xml  setup.py
ros2_ws/src/robot_health_monitor/robot_health_monitor/: config.py  detector.py  health_monitor_node.py  models.py
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robot_interfaces/msg/: RobotAlert.msg  RobotTelemetry.msg
ros2_ws/src/robot_telemetry_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_telemetry_sim/resource/: robot_telemetry_sim
ros2_ws/src/robot_telemetry_sim/robot_telemetry_sim/: telemetry_publisher.py
tests/: test_detector.py
