<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for robot health monitoring.</description>
  <maintainer email="maintainer@example.com">Project Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_telemetry_sim</exec_depend>
  <exec_depend>robot_health_monitor</exec_depend>
  <exec_depend>robot_alert_manager</exec_depend>
  <exec_depend>robot_dashboard_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
